--- a/Final Report/Final Technical Appendix.rmd
+++ b/Final Report/Final Technical Appendix.rmd
@@ -1,7 +1,7 @@
 ---
-title: "Exploratory Analysis"
-author: "Dan"
-date: "20 November 2018"
+title: "**Technical Appendix**"
+subtitle: "Group July"
+date: "26 November 2018"
 geometry: left=2cm, right=2cm, top=2cm, bottom=2cm
 output: pdf_document
 fontsize: 11pt
